# leetcode-tui

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.nix  Cargo.toml  LICENSE  Makefile  README.md  default.nix  flake.nix  main.bak  shell.nix  temp.json
.github/workflows/: ci.yml
app/: Cargo.toml
app-core/: Cargo.toml
app-core/src/: content.rs  event.rs  help.rs  lib.rs  popup.rs  question.rs  step.rs  topic.rs  utils.rs
app-core/src/content/: question.rs  topic.rs
app-core/src/content/question/: sol_dir.rs  stats.rs
app-core/src/question/: sol_dir.rs  stats.rs
app/src/: app.rs  ctx.rs  executor.rs  lib.rs  main.rs  popup.rs  question.rs  root.rs  signals.rs  topic.rs  utils.rs
app/src/question/: stats.rs
config/: Cargo.toml
config/src/: clients.rs  config.rs  constants.rs  error_handling.rs  key.rs  lib.rs  theme.rs  utils.rs
config/src/theme/: style.rs
core/: Cargo.toml
core/src/: errors.rs  event.rs  lib.rs  popup.rs  question.rs  topic.rs  utils.rs
core/src/question/: sol_dir.rs
leetcode-core/: Cargo.toml
leetcode-core/src/: errors.rs  lib.rs
leetcode-core/src/graphql/: client.rs  mod.rs
leetcode-core/src/graphql/query/: console_panel_config.rs  daily_coding_challenge.rs  editor_data.rs  mod.rs  problemset_question_list.rs  question_content.rs  run_code.rs  submit_code.rs
leetcode-core/src/types/: daily_coding_challenge.rs  editor_data.rs  language.rs  mod.rs  problemset_question_list.rs  question_content.rs  run.rs  run_submit_response.rs  submit.rs
leetcode-core/src/types/run_submit_response/: display.rs  res_display.rs
leetcode-core/tests/: test_editor_data.json  test_editor_data.rs  test_solution_run_parsing.json  test_solution_run_parsing.rs  test_submit.json  test_submit.rs
leetcode-db/: Cargo.toml
leetcode-db/src/: errors.rs  lib.rs
leetcode-db/src/models/: topic.rs
leetcode-db/tests/: common.rs  test_question.rs  test_topic.rs
leetcode-tui-config/: Cargo.toml
leetcode-tui-config/src/: clients.rs  config.rs  constants.rs  error_handling.rs  lib.rs  theme.rs  utils.rs
leetcode-tui-config/src/theme/: color.rs
leetcode-tui-core/: Cargo.toml
leetcode-tui-core/src/: content.rs  event.rs  help.rs  input.rs  lib.rs  popup.rs  progress.rs  utils.rs
leetcode-tui-core/src/content/: question.rs  topic.rs
leetcode-tui-core/src/content/question/: sol_dir.rs  stats.rs
leetcode-tui-core/src/utils/: string_ops.rs
leetcode-tui-db/: Cargo.toml
leetcode-tui-db/src/: lib.rs  models.rs
leetcode-tui-db/src/models/: question.rs  topic.rs
leetcode-tui-db/tests/: common.rs  test_question.rs  test_topic.rs
leetcode-tui-rs/: Cargo.toml
leetcode-tui-rs/src/: app.rs  ctx.rs  executor.rs  help.rs  lib.rs  main.rs  popup.rs  question.rs  root.rs  signals.rs  topic.rs  utils.rs
leetcode-tui-rs/src/question/: stats.rs
leetcode-tui-rs/src/widgets/: help.rs  mod.rs  popup.rs  progress_bar.rs  question.rs  root.rs  stats.rs  topic.rs
leetcode-tui-shared/: Cargo.toml
leetcode-tui-shared/src/: layout.rs  tui.rs
leetui/: Cargo.toml
leetui/src/: config.rs  lib.rs  main.rs
leetui/src/app_ui/: async_task_channel.rs
leetui/src/app_ui/components/: color.rs  help_text.rs  list.rs  rect.rs
leetui/src/app_ui/components/popups/: paragraph.rs
leetui/src/app_ui/helpers/: tasks.rs  utils.rs
leetui/src/app_ui/widgets/: mod.rs  notification.rs  stats.rs  topic_list.rs
leetui/src/app_ui/widgets/question_list/: tasks.rs
shared/: Cargo.toml
shared/src/: layout.rs  lib.rs  ro_cell.rs  tui.rs  utils.rs
src/: config.rs  db_ops.rs  deserializers.rs  errors.rs  graphql.rs  lib.rs  main.rs  utils.rs
src/app_ui/: app.rs  async_task_channel.rs  channel.rs  event.rs  handler.rs  list.rs  mod.rs  tui.rs  ui.rs
src/app_ui/components/: color.rs  help_text.rs  list.rs  mod.rs
src/app_ui/components/popups/: mod.rs  paragraph.rs  selection_list.rs
src/app_ui/helpers/: matcher.rs  mod.rs  question.rs  tasks.rs  utils.rs
src/app_ui/widgets/: footer.rs  help_bar.rs  mod.rs  notification.rs  popup.rs  question_list.rs  stats.rs  topic_list.rs
src/app_ui/widgets/question_list/: custom_lists.rs  tasks.rs
src/db_ops/: question.rs  topic_tag.rs
src/deserializers/: console_panel_config.rs  custom_serde.rs  editor_data.rs  mod.rs  problemset_question_list.rs  question.rs  question_content.rs  run_submit.rs  topic_tag.rs
src/entities/: custom_serde.rs  mod.rs  prelude.rs  question.rs  question_topic_tag.rs  topic_tag.rs
src/graphql/: check_run_submit.rs  console_panel_config.rs  editor_data.rs  mod.rs  problemset_question_list.rs  question_content.rs  run_code.rs  submit.rs  submit_code.rs
src/migrations/: m20230718_141525_create_tables.rs  m20230805_060729_not_null_fields.rs  m20230806_122756_unknown_topic.rs  mod.rs  up.sql
src/models/: problem.rs
src/queries/: question.rs
tests/: test_editor_data.json  test_editor_data.rs  test_submit.json  test_submit.rs
tui/: Cargo.toml
tui/src/: action.rs  components.rs  key.rs  lib.rs  main.rs  runner.rs  tui.rs
tui/src/components/: help_bar.rs  question.rs  topic.rs
vhs_tapes/: demo.tape
