#:schema https://json.schemastore.org/cargo.json
[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Akarsh <akarsh.1995.02@gmail.com>"]
description = "Leetcode terminal UI. Helps you browse leetcode stats and manage your leetcode from terminal."
readme = "README.md"
repository = "https://github.com/akarsh1995/leetcode-tui"
homepage = "https://github.com/akarsh1995/leetcode-tui"
license = "MIT"
keywords = ["tui", "leetcode", "terminal", "algorithms", "cli"]
categories = ["algorithms", "command-line-utilities"]
exclude = [".github", "vhs_tapes"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["leetcode-tui-shared", "leetcode-*"]
default-members = ["leetcode-tui-rs"]
resolver = "2"

[workspace.dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
thiserror = "^1"
tokio = { version = "^1", features = ["full"] }
crossterm = { version = "^0", features = ["event-stream"] }
ratatui = { version = "^0.23", features = ["all-widgets"] }
tokio-util = "^0"
color-eyre = "^0"
native_db = "^0"
native_model = "^0"
reqwest = { version = "^0" }
regex = { version = "^1" }

[profile.release]
lto = true
opt-level = "z" # Optimize for size.
