[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
leetcode-core = { path = "../leetcode-core" }
leetcode-db = { path = "../leetcode-db" }
kdam = { version = "^0" }

config = { path = "../config" }
core = { path = "../core" }
shared = { path = "../shared" }

# thiserror = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }
tokio = { workspace = true }
# tokio-util = { workspace = true }
color-eyre = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures = "0.3.28"
# log = "0.4.20"
# kdam = "^0"
