[package]
name = "app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "leetui"
path = "src/main.rs"

[dependencies]
leetcode-core = { path = "../leetcode-core", version = "0.4.0" }
leetcode-db = { path = "../leetcode-db", version = "0.4.0" }
kdam = { version = "^0" }

config = { path = "../config", version = '0.4.0' }
app-core = { path = "../app-core", version = '0.4.0' }
shared = { path = "../shared", version = '0.4.0' }

tokio = { workspace = true }
tokio-util = { workspace = true }
color-eyre = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures = "0.3.28"
