[package]
name = "config"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
crossterm = { workspace = true }
surrealdb = { workspace = true }
reqwest = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
toml = "^0"
