[package]
name = "core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
config = { path = "../config" }
tokio = { workspace = true }
leetcode-db = { path = "../leetcode-db/" }
leetcode-core = { path = "../leetcode-core" }
crossterm = { workspace = true }
ratatui = { workspace = true }
color-eyre = { workspace = true }
