[package]
name = "leetcode-core"
description = "This library helps to talk to leetcode APIs via REST interface"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
html2text = "^0"
async-trait = "^0"
strum = { version = "^0", features = ["derive"] }
serde_with = { version = "3.3.0", features = ["macros"] }
lru = "^0"
log = { workspace = true }
