[package]
name = "leetcode-db"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
leetcode-core = { path = "../leetcode-core", version = '0.4.0' }
shared = { path = "../shared", version = '0.4.0' }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
native_db = { workspace = true }
native_model = { workspace = true }
