[package]
name = "leetcode-tui-config"
description = "Leetcode tui config library"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
leetcode-tui-shared = { path = "../leetcode-tui-shared", version = '0.5.2' }
crossterm = { workspace = true }
native_db = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
toml = "0.7.8"
libc = "0.2.148"
log = { workspace = true }
tracing = "0.1.37"
tracing-error = "0.2.0"
directories = "5.0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
clap = { version = "4.4.6", features = [
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
] }
better-panic = "0.3.0"
strip-ansi-escapes = "0.2.0"
human-panic = "1.2.1"
ratatui = { workspace = true }
anyhow = "1.0.75"
