[package]
name = "leetcode-tui-core"
description = "Leetcode tui related core modules"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
leetcode-tui-shared = { path = "../leetcode-tui-shared", version = '0.4.0' }
leetcode-tui-config = { path = "../leetcode-tui-config", version = '0.4.0' }
tokio = { workspace = true }
leetcode-tui-db = { path = "../leetcode-tui-db/", version = '0.4.0' }
leetcode-core = { path = "../leetcode-core", version = '0.4.0' }
crossterm = { workspace = true }
ratatui = { workspace = true }
color-eyre = { workspace = true }
regex = { workspace = true }
indexmap = "^2"
fuzzy-matcher = "^0"
