[package]
name = "leetcode-tui-core"
description = "Leetcode tui related core modules"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
leetcode-tui-shared = { path = "../leetcode-tui-shared", version = '0.5.1' }
leetcode-tui-config = { path = "../leetcode-tui-config", version = '0.5.1' }
tokio = { workspace = true }
leetcode-tui-db = { path = "../leetcode-tui-db/", version = '0.5.1' }
leetcode-core = { path = "../leetcode-core", version = '0.5.1' }
crossterm = { workspace = true }
ratatui = { workspace = true }
color-eyre = { workspace = true }
regex = { workspace = true }
indexmap = "2.0.1"
fuzzy-matcher = "0.3.7"
rand = "0.8.5"
html2md = { workspace = true }
