
[package]
name = "leetui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam = "*"
crossterm = { version = "^0", features = ["event-stream"] }
futures = "^0"
fuzzy-matcher = "^0"
indexmap = "^2"
kdam = "^0"
lru = "^0"
rand = "^0"
ratatui = { version = "^0", features = ["all-widgets"] }
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
toml = "^0"
xdg = "^2"

[[bin]]
name = "leetui"
path = "src/main.rs"
