
[package]
name = "tui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
leetcode-core = { path = "../leetcode-core" }
leetcode-db = { path = "../leetcode-db" }
# surrealdb = { version = "^1", features = ["kv-mem"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
color-eyre = "0.6.2"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.28"
signal-hook = "0.3.17"
tokio-util = "^0"
# surrealdb = { version = "^1", features = ["kv-rocksdb"] }
# tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
# serde = { version = "1.0.188", features = ["derive"] }
# serde_json = { version = "^1" }
log = "0.4.20"
kdam = "^0"
